--- a/style.css
+++ b/style.css
@@ -31,6 +31,43 @@ h1 {
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+.field > .card:nth-of-type(1) {
+  animation: fadeIn both 600ms 0ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(2) {
+  animation: fadeIn both 600ms 30ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(3) {
+  animation: fadeIn both 600ms 60ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(4) {
+  animation: fadeIn both 600ms 90ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(5) {
+  animation: fadeIn both 600ms 120ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(6) {
+  animation: fadeIn both 600ms 150ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(7) {
+  animation: fadeIn both 600ms 180ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(8) {
+  animation: fadeIn both 600ms 210ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(9) {
+  animation: fadeIn both 600ms 240ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(10) {
+  animation: fadeIn both 600ms 270ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(11) {
+  animation: fadeIn both 600ms 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.field > .card:nth-of-type(12) {
+  animation: fadeIn both 600ms 330ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
 .card {
   height: 27vw;
   max-height: 200px;
@@ -90,4 +127,49 @@ h1 {
   height: 100%;
   max-width: 70px;
   max-height: 70px;
+}
+
+.modal {
+  margin-top: -28px;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
+
+  background-color: #fffc;
+
+  animation: fadeIn both 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.modal-shown {
+  display: flex;
+}
+
+.modal > button {
+  background-color: lightblue;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  padding: 5px 10px;
+
+  transition: 150ms;
+}
+
+.modal > button:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 15px -10px hsl(195, 33%, 50%);
+}
+
+@keyframes fadeIn {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
